clean and fix file paths

--- a/LogisticRegression.ipynb
+++ b/LogisticRegression.ipynb
@@ -2,83 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 0, Loss: 1.6105440751826163\n",
-      "Epoch 100, Loss: 1.0228165208175526\n",
-      "Epoch 200, Loss: 0.980322380079138\n",
-      "Epoch 300, Loss: 0.9681703572995907\n",
-      "Epoch 400, Loss: 0.9631022070100799\n",
-      "Epoch 500, Loss: 0.9605844746694882\n",
-      "Epoch 600, Loss: 0.9591927284396055\n",
-      "Epoch 700, Loss: 0.9583637319736434\n",
-      "Epoch 800, Loss: 0.9578413627332292\n",
-      "Epoch 900, Loss: 0.957497301812286\n",
-      "Validation Accuracy for fold: 0.6112280701754386\n",
-      "Epoch 0, Loss: 1.613511604226043\n",
-      "Epoch 100, Loss: 1.0182859052352555\n",
-      "Epoch 200, Loss: 0.9749652276755921\n",
-      "Epoch 300, Loss: 0.9623647473011693\n",
-      "Epoch 400, Loss: 0.957025567325256\n",
-      "Epoch 500, Loss: 0.9543380534983229\n",
-      "Epoch 600, Loss: 0.9528367406568513\n",
-      "Epoch 700, Loss: 0.9519348457247151\n",
-      "Epoch 800, Loss: 0.9513624300794101\n",
-      "Epoch 900, Loss: 0.9509829269611436\n",
-      "Validation Accuracy for fold: 0.5992982456140351\n",
-      "Epoch 0, Loss: 1.6101373401164965\n",
-      "Epoch 100, Loss: 1.015201390729419\n",
-      "Epoch 200, Loss: 0.9722600903119383\n",
-      "Epoch 300, Loss: 0.9598866630287781\n",
-      "Epoch 400, Loss: 0.9546685842129263\n",
-      "Epoch 500, Loss: 0.9520417588133714\n",
-      "Epoch 600, Loss: 0.950569021500034\n",
-      "Epoch 700, Loss: 0.9496790881784671\n",
-      "Epoch 800, Loss: 0.9491102651517205\n",
-      "Epoch 900, Loss: 0.948730331183235\n",
-      "Validation Accuracy for fold: 0.5936842105263158\n",
-      "Epoch 0, Loss: 1.613677802355594\n",
-      "Epoch 100, Loss: 1.0184496822937215\n",
-      "Epoch 200, Loss: 0.974894582002143\n",
-      "Epoch 300, Loss: 0.9621381062121649\n",
-      "Epoch 400, Loss: 0.9566648106376867\n",
-      "Epoch 500, Loss: 0.9538622792592147\n",
-      "Epoch 600, Loss: 0.9522645103805989\n",
-      "Epoch 700, Loss: 0.9512833371394205\n",
-      "Epoch 800, Loss: 0.9506467066727092\n",
-      "Epoch 900, Loss: 0.9502156722148063\n",
-      "Validation Accuracy for fold: 0.5988065988065988\n",
-      "Epoch 0, Loss: 1.6202613126881866\n",
-      "Epoch 100, Loss: 1.0190833514998276\n",
-      "Epoch 200, Loss: 0.9758564365484498\n",
-      "Epoch 300, Loss: 0.9633278563323754\n",
-      "Epoch 400, Loss: 0.9580191131353314\n",
-      "Epoch 500, Loss: 0.9553368891293174\n",
-      "Epoch 600, Loss: 0.9538277066284203\n",
-      "Epoch 700, Loss: 0.9529123311662541\n",
-      "Epoch 800, Loss: 0.9523250692489552\n",
-      "Epoch 900, Loss: 0.9519314867491957\n",
-      "Validation Accuracy for fold: 0.5984555984555985\n",
-      "Average Cross-Validation Accuracy: 0.6002945447155973\n",
-      "Epoch 0, Loss: 1.6139151730673966\n",
-      "Epoch 100, Loss: 1.0225963689961413\n",
-      "Epoch 200, Loss: 0.9802297989640427\n",
-      "Epoch 300, Loss: 0.9681214758100611\n",
-      "Epoch 400, Loss: 0.9630734073157653\n",
-      "Epoch 500, Loss: 0.960566396551498\n",
-      "Epoch 600, Loss: 0.959180842277731\n",
-      "Epoch 700, Loss: 0.9583556220170609\n",
-      "Epoch 800, Loss: 0.9578356560780188\n",
-      "Epoch 900, Loss: 0.9574931793064\n",
-      "Final Test Accuracy: 0.6108771929824561\n"
-     ]
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-03T19:27:19.131785Z",
+     "start_time": "2024-10-03T19:23:02.147338Z"
     }
-   ],
+   },
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -87,27 +16,27 @@
     "from skimage.feature import hog\n",
     "from sklearn.decomposition import PCA\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.model_selection import train_test_split, cross_val_score\n",
+    "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import LabelEncoder\n",
-    "from sklearn.metrics import accuracy_score\n",
     "from sklearn.model_selection import KFold\n",
+    "\n",
     "\n",
     "# Load and preprocess dataset\n",
     "def load_data(csv_file, base_folder, image_size=(64, 64)):\n",
     "    df = pd.read_csv(csv_file)\n",
-    "    \n",
+    "\n",
     "    # Remove \"Ahegao\" class if present\n",
     "    df = df[df['label'] != 'Ahegao']\n",
-    "    \n",
+    "\n",
     "    # Initialize lists for images and labels\n",
     "    images = []\n",
     "    labels = []\n",
-    "    \n",
+    "\n",
     "    # Iterate through CSV, load images, and resize them\n",
     "    for index, row in df.iterrows():\n",
     "        img_path = os.path.join(base_folder, row['path'].strip())\n",
     "        label = row['label']\n",
-    "        \n",
+    "\n",
     "        # Load and preprocess image\n",
     "        try:\n",
     "            img = Image.open(img_path).convert('RGB').resize(image_size)\n",
@@ -119,19 +48,23 @@
     "\n",
     "    return np.array(images), np.array(labels)\n",
     "\n",
+    "\n",
     "# Correct paths to your dataset\n",
-    "csv_file = r\"C:/Users/kasse/Documents/faceRecog/archive/data.csv\"\n",
-    "base_folder = r\"C:/Users/kasse/Documents/faceRecog/archive/dataset\"\n",
+    "csv_file = r\"./archive/data.csv\"\n",
+    "base_folder = r\"./archive/dataset\"\n",
     "\n",
     "# Load images and labels\n",
     "X, y = load_data(csv_file, base_folder)\n",
+    "\n",
     "\n",
     "### Feature Engineering ###\n",
     "# Step 1: Convert RGB images to grayscale\n",
     "def rgb_to_grayscale(images):\n",
     "    return np.dot(images[..., :3], [0.2989, 0.5870, 0.1140])\n",
     "\n",
+    "\n",
     "X_gray = rgb_to_grayscale(X)\n",
+    "\n",
     "\n",
     "# Step 2: Extract HOG features\n",
     "def extract_hog_features(images):\n",
@@ -141,19 +74,24 @@
     "        hog_features.append(features)\n",
     "    return np.array(hog_features)\n",
     "\n",
+    "\n",
     "X_hog = extract_hog_features(X_gray)\n",
+    "\n",
     "\n",
     "# Step 3: Apply PCA for dimensionality reduction\n",
     "def apply_pca(features, n_components=100):\n",
     "    pca = PCA(n_components=n_components)\n",
     "    return pca.fit_transform(features)\n",
     "\n",
+    "\n",
     "X_pca = apply_pca(X_hog, n_components=100)\n",
+    "\n",
     "\n",
     "# Step 4: Normalize the features\n",
     "def normalize_features(features):\n",
     "    scaler = StandardScaler()\n",
     "    return scaler.fit_transform(features)\n",
+    "\n",
     "\n",
     "X_normalized = normalize_features(X_pca)\n",
     "\n",
@@ -172,48 +110,51 @@
     "\n",
     "y_test_labels = np.argmax(y_test, axis=1)  # True labels for test data\n",
     "\n",
+    "\n",
     "### Logistic Regression Implementation ###\n",
     "class LogisticRegression:\n",
-    "    def __init__(self, input_size, num_classes, learning_rate=0.1, regularization=0.001):  # Best hyperparameters applied directly\n",
+    "    def __init__(self, input_size, num_classes, learning_rate=0.1,\n",
+    "                 regularization=0.001):  # Best hyperparameters applied directly\n",
     "        self.W = np.random.randn(input_size, num_classes) * 0.01\n",
     "        self.b = np.zeros((1, num_classes))\n",
     "        self.learning_rate = learning_rate\n",
     "        self.regularization = regularization\n",
-    "    \n",
+    "\n",
     "    def softmax(self, z):\n",
     "        exp_z = np.exp(z - np.max(z, axis=1, keepdims=True))\n",
     "        return exp_z / np.sum(exp_z, axis=1, keepdims=True)\n",
-    "    \n",
+    "\n",
     "    def compute_loss(self, y, y_hat):\n",
     "        m = y.shape[0]\n",
     "        cross_entropy_loss = -np.sum(y * np.log(y_hat + 1e-8)) / m\n",
     "        l2_loss = self.regularization * np.sum(np.square(self.W)) / 2  # L2 regularization term\n",
     "        return cross_entropy_loss + l2_loss\n",
-    "    \n",
+    "\n",
     "    def compute_gradients(self, X, y, y_hat):\n",
     "        m = X.shape[0]\n",
     "        dW = np.dot(X.T, (y_hat - y)) / m + self.regularization * self.W  # L2 regularization gradient\n",
     "        db = np.sum(y_hat - y, axis=0, keepdims=True) / m\n",
     "        return dW, db\n",
-    "    \n",
+    "\n",
     "    def train(self, X, y, epochs=1000):  # Best number of epochs applied directly\n",
     "        for i in range(epochs):\n",
     "            z = np.dot(X, self.W) + self.b\n",
     "            y_hat = self.softmax(z)\n",
-    "            \n",
+    "\n",
     "            loss = self.compute_loss(y, y_hat)\n",
     "            dW, db = self.compute_gradients(X, y, y_hat)\n",
-    "            \n",
+    "\n",
     "            self.W -= self.learning_rate * dW\n",
     "            self.b -= self.learning_rate * db\n",
-    "            \n",
+    "\n",
     "            if i % 100 == 0:\n",
     "                print(f\"Epoch {i}, Loss: {loss}\")\n",
-    "    \n",
+    "\n",
     "    def predict(self, X):\n",
     "        z = np.dot(X, self.W) + self.b\n",
     "        y_hat = self.softmax(z)\n",
     "        return np.argmax(y_hat, axis=1)\n",
+    "\n",
     "\n",
     "### Hyperparameter Selection Step - Commented Out ###\n",
     "# We are commenting out the random search section as we have already determined the best hyperparameters\n",
@@ -249,6 +190,7 @@
     "best_hyperparameters = best_params_random\n",
     "\"\"\"\n",
     "\n",
+    "\n",
     "### K-Fold Cross-Validation ###\n",
     "def cross_validate_model(X, y, num_folds=5):\n",
     "    kf = KFold(n_splits=num_folds, shuffle=True, random_state=42)\n",
@@ -259,7 +201,8 @@
     "        y_train, y_val = y[train_index], y[val_index]\n",
     "\n",
     "        # Train the model\n",
-    "        model = LogisticRegression(input_size=X_train.shape[1], num_classes=y_train.shape[1], learning_rate=0.1, regularization=0.001)\n",
+    "        model = LogisticRegression(input_size=X_train.shape[1], num_classes=y_train.shape[1], learning_rate=0.1,\n",
+    "                                   regularization=0.001)\n",
     "        model.train(X_train, y_train, epochs=1000)\n",
     "\n",
     "        # Validate the model\n",
@@ -272,19 +215,104 @@
     "    print(f\"Average Cross-Validation Accuracy: {avg_accuracy}\")\n",
     "    return avg_accuracy\n",
     "\n",
+    "\n",
     "# Perform cross-validation with 5 folds\n",
     "cross_validation_accuracy = cross_validate_model(X_normalized, y_one_hot, num_folds=5)\n",
     "\n",
     "### Final Model Training with the Best Hyperparameters ###\n",
     "# Use the best hyperparameters directly\n",
-    "final_model = LogisticRegression(input_size=X_train_full.shape[1], num_classes=y_train_full.shape[1], learning_rate=0.1, regularization=0.001)\n",
+    "final_model = LogisticRegression(input_size=X_train_full.shape[1], num_classes=y_train_full.shape[1], learning_rate=0.1,\n",
+    "                                 regularization=0.001)\n",
     "final_model.train(X_train_full, y_train_full, epochs=1000)\n",
     "\n",
     "# Test the final model\n",
     "y_test_pred = final_model.predict(X_test)\n",
     "final_accuracy = np.mean(np.argmax(y_test, axis=1) == y_test_pred)\n",
     "print(f\"Final Test Accuracy: {final_accuracy}\")\n"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 0, Loss: 1.6152142065402426\n",
+      "Epoch 100, Loss: 1.0237329530754582\n",
+      "Epoch 200, Loss: 0.9809370798376079\n",
+      "Epoch 300, Loss: 0.9686744394065568\n",
+      "Epoch 400, Loss: 0.9635813781278232\n",
+      "Epoch 500, Loss: 0.9610690161128623\n",
+      "Epoch 600, Loss: 0.9596920462312584\n",
+      "Epoch 700, Loss: 0.958879555781976\n",
+      "Epoch 800, Loss: 0.9583725851514061\n",
+      "Epoch 900, Loss: 0.9580418809822743\n",
+      "Validation Accuracy for fold: 0.6126315789473684\n",
+      "Epoch 0, Loss: 1.6128431898659845\n",
+      "Epoch 100, Loss: 1.0193831768168873\n",
+      "Epoch 200, Loss: 0.9760632027290654\n",
+      "Epoch 300, Loss: 0.9634584778748244\n",
+      "Epoch 400, Loss: 0.9581415401359136\n",
+      "Epoch 500, Loss: 0.9554849713782537\n",
+      "Epoch 600, Loss: 0.9540146791281156\n",
+      "Epoch 700, Loss: 0.9531407241070363\n",
+      "Epoch 800, Loss: 0.9525922983028655\n",
+      "Epoch 900, Loss: 0.9522328901495598\n",
+      "Validation Accuracy for fold: 0.5954385964912281\n",
+      "Epoch 0, Loss: 1.6234253872516402\n",
+      "Epoch 100, Loss: 1.0163655558212206\n",
+      "Epoch 200, Loss: 0.9729699187450445\n",
+      "Epoch 300, Loss: 0.9604506262676149\n",
+      "Epoch 400, Loss: 0.9551882320807307\n",
+      "Epoch 500, Loss: 0.9525572118069636\n",
+      "Epoch 600, Loss: 0.951095709751372\n",
+      "Epoch 700, Loss: 0.9502220181782988\n",
+      "Epoch 800, Loss: 0.9496699404826547\n",
+      "Epoch 900, Loss: 0.9493053900028006\n",
+      "Validation Accuracy for fold: 0.5870175438596491\n",
+      "Epoch 0, Loss: 1.6176030343796108\n",
+      "Epoch 100, Loss: 1.0190786078735548\n",
+      "Epoch 200, Loss: 0.9754541409610531\n",
+      "Epoch 300, Loss: 0.9626816207266459\n",
+      "Epoch 400, Loss: 0.9572303728548536\n",
+      "Epoch 500, Loss: 0.9544618079033842\n",
+      "Epoch 600, Loss: 0.952898952457608\n",
+      "Epoch 700, Loss: 0.9519496494171753\n",
+      "Epoch 800, Loss: 0.9513406379113398\n",
+      "Epoch 900, Loss: 0.9509329031774233\n",
+      "Validation Accuracy for fold: 0.5967005967005967\n",
+      "Epoch 0, Loss: 1.6174786021427827\n",
+      "Epoch 100, Loss: 1.0202814947516536\n",
+      "Epoch 200, Loss: 0.9770937226306239\n",
+      "Epoch 300, Loss: 0.9645469954925214\n",
+      "Epoch 400, Loss: 0.9592356481963852\n",
+      "Epoch 500, Loss: 0.9565600923048498\n",
+      "Epoch 600, Loss: 0.9550611643127992\n",
+      "Epoch 700, Loss: 0.9541567349290742\n",
+      "Epoch 800, Loss: 0.9535797380214568\n",
+      "Epoch 900, Loss: 0.9531951720403885\n",
+      "Validation Accuracy for fold: 0.5998595998595999\n",
+      "Average Cross-Validation Accuracy: 0.5983295831716884\n",
+      "Epoch 0, Loss: 1.6151349207448324\n",
+      "Epoch 100, Loss: 1.023580874912432\n",
+      "Epoch 200, Loss: 0.9808729617492862\n",
+      "Epoch 300, Loss: 0.9686416247142526\n",
+      "Epoch 400, Loss: 0.9635627149456286\n",
+      "Epoch 500, Loss: 0.9610576198788667\n",
+      "Epoch 600, Loss: 0.9596846737087495\n",
+      "Epoch 700, Loss: 0.958874541486346\n",
+      "Epoch 800, Loss: 0.9583690212274001\n",
+      "Epoch 900, Loss: 0.9580392476911603\n",
+      "Final Test Accuracy: 0.6126315789473684\n"
+     ]
+    }
+   ],
+   "execution_count": 2
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": ""
   }
  ],
  "metadata": {
