Organize the code structure

--- a/LogisticRegression.ipynb
+++ b/LogisticRegression.ipynb
@@ -2,12 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-03T19:27:19.131785Z",
      "start_time": "2024-10-03T19:23:02.147338Z"
     }
    },
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -108,9 +110,139 @@
     "X_train_full, X_test, y_train_full, y_test = train_test_split(X_normalized, y_one_hot, test_size=0.2, random_state=42)\n",
     "X_train, X_val, y_train, y_val = train_test_split(X_train_full, y_train_full, test_size=0.2, random_state=42)\n",
     "\n",
-    "y_test_labels = np.argmax(y_test, axis=1)  # True labels for test data\n",
-    "\n",
-    "\n",
+    "y_test_labels = np.argmax(y_test, axis=1)  # True labels for test data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 0, Loss: 1.6176187348889257\n",
+      "Epoch 100, Loss: 1.0231170437853447\n",
+      "Epoch 200, Loss: 0.9803738740234033\n",
+      "Epoch 300, Loss: 0.9681932601909958\n",
+      "Epoch 400, Loss: 0.9631262159740799\n",
+      "Epoch 500, Loss: 0.9606134857012282\n",
+      "Epoch 600, Loss: 0.9592263440365224\n",
+      "Epoch 700, Loss: 0.958401162086725\n",
+      "Epoch 800, Loss: 0.9578820089599873\n",
+      "Epoch 900, Loss: 0.9575407372313467\n",
+      "Epoch 1000, Loss: 0.9573083259432604\n",
+      "Epoch 1100, Loss: 0.9571454081179529\n",
+      "Epoch 1200, Loss: 0.9570284519182541\n",
+      "Epoch 1300, Loss: 0.9569428216804059\n",
+      "Epoch 1400, Loss: 0.9568790969937104\n",
+      "Epoch 1500, Loss: 0.9568310294261427\n",
+      "Epoch 1600, Loss: 0.9567943635231587\n",
+      "Epoch 1700, Loss: 0.9567661330018743\n",
+      "Epoch 1800, Loss: 0.9567442276336368\n",
+      "Epoch 1900, Loss: 0.9567271192358284\n",
+      "Validation Accuracy for fold: 0.6108771929824561\n",
+      "Epoch 0, Loss: 1.6105512949757956\n",
+      "Epoch 100, Loss: 1.0177918791016314\n",
+      "Epoch 200, Loss: 0.9746052673976708\n",
+      "Epoch 300, Loss: 0.9620468036370203\n",
+      "Epoch 400, Loss: 0.9567295982846239\n",
+      "Epoch 500, Loss: 0.9540543197610413\n",
+      "Epoch 600, Loss: 0.952559735735481\n",
+      "Epoch 700, Loss: 0.9516614638482683\n",
+      "Epoch 800, Loss: 0.9510909559169415\n",
+      "Epoch 900, Loss: 0.950712434217256\n",
+      "Epoch 1000, Loss: 0.9504522095965786\n",
+      "Epoch 1100, Loss: 0.9502680010730408\n",
+      "Epoch 1200, Loss: 0.9501344108057624\n",
+      "Epoch 1300, Loss: 0.9500355727113865\n",
+      "Epoch 1400, Loss: 0.9499612290542361\n",
+      "Epoch 1500, Loss: 0.949904543018566\n",
+      "Epoch 1600, Loss: 0.9498608327752847\n",
+      "Epoch 1700, Loss: 0.9498268143115077\n",
+      "Epoch 1800, Loss: 0.9498001348430495\n",
+      "Epoch 1900, Loss: 0.9497790772788616\n",
+      "Validation Accuracy for fold: 0.5929824561403508\n",
+      "Epoch 0, Loss: 1.6090178999783944\n",
+      "Epoch 100, Loss: 1.0151451064173247\n",
+      "Epoch 200, Loss: 0.9724449879428548\n",
+      "Epoch 300, Loss: 0.9601574191749663\n",
+      "Epoch 400, Loss: 0.9549784801138881\n",
+      "Epoch 500, Loss: 0.9523723207932879\n",
+      "Epoch 600, Loss: 0.9509116044946074\n",
+      "Epoch 700, Loss: 0.9500292958773412\n",
+      "Epoch 800, Loss: 0.9494657248480658\n",
+      "Epoch 900, Loss: 0.9490896789305234\n",
+      "Epoch 1000, Loss: 0.9488298148820397\n",
+      "Epoch 1100, Loss: 0.9486450453925603\n",
+      "Epoch 1200, Loss: 0.9485105661613733\n",
+      "Epoch 1300, Loss: 0.9484107933465152\n",
+      "Epoch 1400, Loss: 0.9483355920992427\n",
+      "Epoch 1500, Loss: 0.9482781690221281\n",
+      "Epoch 1600, Loss: 0.948233847920472\n",
+      "Epoch 1700, Loss: 0.9481993340315373\n",
+      "Epoch 1800, Loss: 0.9481722581092782\n",
+      "Epoch 1900, Loss: 0.9481508859477071\n",
+      "Validation Accuracy for fold: 0.5859649122807018\n",
+      "Epoch 0, Loss: 1.6123772845183477\n",
+      "Epoch 100, Loss: 1.0174514713458322\n",
+      "Epoch 200, Loss: 0.974164916612797\n",
+      "Epoch 300, Loss: 0.9615244559693317\n",
+      "Epoch 400, Loss: 0.9561137472148193\n",
+      "Epoch 500, Loss: 0.9533481276624063\n",
+      "Epoch 600, Loss: 0.9517733008890648\n",
+      "Epoch 700, Loss: 0.9508071057108975\n",
+      "Epoch 800, Loss: 0.9501807658928406\n",
+      "Epoch 900, Loss: 0.9497571621580994\n",
+      "Epoch 1000, Loss: 0.9494609017174499\n",
+      "Epoch 1100, Loss: 0.9492480228838094\n",
+      "Epoch 1200, Loss: 0.9490916401639826\n",
+      "Epoch 1300, Loss: 0.9489746460909528\n",
+      "Epoch 1400, Loss: 0.9488857829929263\n",
+      "Epoch 1500, Loss: 0.9488174259375942\n",
+      "Epoch 1600, Loss: 0.9487642799302725\n",
+      "Epoch 1700, Loss: 0.9487225871251566\n",
+      "Epoch 1800, Loss: 0.9486896293660257\n",
+      "Epoch 1900, Loss: 0.9486634074396713\n",
+      "Validation Accuracy for fold: 0.5928395928395929\n",
+      "Epoch 0, Loss: 1.6043231517915892\n",
+      "Epoch 100, Loss: 1.018712381303074\n",
+      "Epoch 200, Loss: 0.9760853701665878\n",
+      "Epoch 300, Loss: 0.963724603567401\n",
+      "Epoch 400, Loss: 0.9584918478182328\n",
+      "Epoch 500, Loss: 0.955851279357016\n",
+      "Epoch 600, Loss: 0.9543673977717556\n",
+      "Epoch 700, Loss: 0.9534686037900889\n",
+      "Epoch 800, Loss: 0.9528929301927481\n",
+      "Epoch 900, Loss: 0.9525078924261989\n",
+      "Epoch 1000, Loss: 0.9522413352046283\n",
+      "Epoch 1100, Loss: 0.9520515929181897\n",
+      "Epoch 1200, Loss: 0.9519134266418362\n",
+      "Epoch 1300, Loss: 0.9518109212145389\n",
+      "Epoch 1400, Loss: 0.9517336905323563\n",
+      "Epoch 1500, Loss: 0.9516747529730756\n",
+      "Epoch 1600, Loss: 0.951629293193051\n",
+      "Epoch 1700, Loss: 0.9515939147614721\n",
+      "Epoch 1800, Loss: 0.9515661748285869\n",
+      "Epoch 1900, Loss: 0.9515442862325294\n",
+      "Validation Accuracy for fold: 0.5967005967005967\n",
+      "Average Cross-Validation Accuracy: 0.5958729501887398\n",
+      "Epoch 0, Loss: 1.6119712488981475\n",
+      "Epoch 100, Loss: 1.0227680019796441\n",
+      "Epoch 200, Loss: 0.9802899902727151\n",
+      "Epoch 300, Loss: 0.9681601170656842\n",
+      "Epoch 400, Loss: 0.9631097935932224\n",
+      "Epoch 500, Loss: 0.9606041730101054\n",
+      "Epoch 600, Loss: 0.9592205033948942\n",
+      "Epoch 700, Loss: 0.9583971790526501\n",
+      "Epoch 800, Loss: 0.9578790862507188\n",
+      "Epoch 900, Loss: 0.9575384493463589\n",
+      "Final Test Accuracy: 0.6112280701754386\n"
+     ]
+    }
+   ],
+   "source": [
     "### Logistic Regression Implementation ###\n",
     "class LogisticRegression:\n",
     "    def __init__(self, input_size, num_classes, learning_rate=0.1,\n",
@@ -228,91 +360,8 @@
     "# Test the final model\n",
     "y_test_pred = final_model.predict(X_test)\n",
     "final_accuracy = np.mean(np.argmax(y_test, axis=1) == y_test_pred)\n",
-    "print(f\"Final Test Accuracy: {final_accuracy}\")\n"
-   ],
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 0, Loss: 1.6152142065402426\n",
-      "Epoch 100, Loss: 1.0237329530754582\n",
-      "Epoch 200, Loss: 0.9809370798376079\n",
-      "Epoch 300, Loss: 0.9686744394065568\n",
-      "Epoch 400, Loss: 0.9635813781278232\n",
-      "Epoch 500, Loss: 0.9610690161128623\n",
-      "Epoch 600, Loss: 0.9596920462312584\n",
-      "Epoch 700, Loss: 0.958879555781976\n",
-      "Epoch 800, Loss: 0.9583725851514061\n",
-      "Epoch 900, Loss: 0.9580418809822743\n",
-      "Validation Accuracy for fold: 0.6126315789473684\n",
-      "Epoch 0, Loss: 1.6128431898659845\n",
-      "Epoch 100, Loss: 1.0193831768168873\n",
-      "Epoch 200, Loss: 0.9760632027290654\n",
-      "Epoch 300, Loss: 0.9634584778748244\n",
-      "Epoch 400, Loss: 0.9581415401359136\n",
-      "Epoch 500, Loss: 0.9554849713782537\n",
-      "Epoch 600, Loss: 0.9540146791281156\n",
-      "Epoch 700, Loss: 0.9531407241070363\n",
-      "Epoch 800, Loss: 0.9525922983028655\n",
-      "Epoch 900, Loss: 0.9522328901495598\n",
-      "Validation Accuracy for fold: 0.5954385964912281\n",
-      "Epoch 0, Loss: 1.6234253872516402\n",
-      "Epoch 100, Loss: 1.0163655558212206\n",
-      "Epoch 200, Loss: 0.9729699187450445\n",
-      "Epoch 300, Loss: 0.9604506262676149\n",
-      "Epoch 400, Loss: 0.9551882320807307\n",
-      "Epoch 500, Loss: 0.9525572118069636\n",
-      "Epoch 600, Loss: 0.951095709751372\n",
-      "Epoch 700, Loss: 0.9502220181782988\n",
-      "Epoch 800, Loss: 0.9496699404826547\n",
-      "Epoch 900, Loss: 0.9493053900028006\n",
-      "Validation Accuracy for fold: 0.5870175438596491\n",
-      "Epoch 0, Loss: 1.6176030343796108\n",
-      "Epoch 100, Loss: 1.0190786078735548\n",
-      "Epoch 200, Loss: 0.9754541409610531\n",
-      "Epoch 300, Loss: 0.9626816207266459\n",
-      "Epoch 400, Loss: 0.9572303728548536\n",
-      "Epoch 500, Loss: 0.9544618079033842\n",
-      "Epoch 600, Loss: 0.952898952457608\n",
-      "Epoch 700, Loss: 0.9519496494171753\n",
-      "Epoch 800, Loss: 0.9513406379113398\n",
-      "Epoch 900, Loss: 0.9509329031774233\n",
-      "Validation Accuracy for fold: 0.5967005967005967\n",
-      "Epoch 0, Loss: 1.6174786021427827\n",
-      "Epoch 100, Loss: 1.0202814947516536\n",
-      "Epoch 200, Loss: 0.9770937226306239\n",
-      "Epoch 300, Loss: 0.9645469954925214\n",
-      "Epoch 400, Loss: 0.9592356481963852\n",
-      "Epoch 500, Loss: 0.9565600923048498\n",
-      "Epoch 600, Loss: 0.9550611643127992\n",
-      "Epoch 700, Loss: 0.9541567349290742\n",
-      "Epoch 800, Loss: 0.9535797380214568\n",
-      "Epoch 900, Loss: 0.9531951720403885\n",
-      "Validation Accuracy for fold: 0.5998595998595999\n",
-      "Average Cross-Validation Accuracy: 0.5983295831716884\n",
-      "Epoch 0, Loss: 1.6151349207448324\n",
-      "Epoch 100, Loss: 1.023580874912432\n",
-      "Epoch 200, Loss: 0.9808729617492862\n",
-      "Epoch 300, Loss: 0.9686416247142526\n",
-      "Epoch 400, Loss: 0.9635627149456286\n",
-      "Epoch 500, Loss: 0.9610576198788667\n",
-      "Epoch 600, Loss: 0.9596846737087495\n",
-      "Epoch 700, Loss: 0.958874541486346\n",
-      "Epoch 800, Loss: 0.9583690212274001\n",
-      "Epoch 900, Loss: 0.9580392476911603\n",
-      "Final Test Accuracy: 0.6126315789473684\n"
-     ]
-    }
-   ],
-   "execution_count": 2
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": ""
+    "print(f\"Final Test Accuracy: {final_accuracy}\")"
+   ]
   }
  ],
  "metadata": {
