--- a/images.ipynb
+++ b/images.ipynb
@@ -2,37 +2,49 @@
  "cells": [
   {
    "metadata": {},
-   "cell_type": "code",
+   "cell_type": "raw",
    "source": [
-    "from image_util import resize_images\n",
+    "from image_util import resize_and_save\n",
     "\n",
     "# Correct paths to your dataset\n",
     "csv_file = r\"./archive/data.csv\"\n",
     "base_folder = r\"./archive/dataset\"\n",
     "target_folder = r\"./archive/resized\"\n",
     "\n",
-    "# normalize images\n",
-    "resize_images(csv_file, base_folder, target_folder)\n"
-   ],
-   "outputs": [],
-   "execution_count": null
+    "# resize images\n",
+    "resize_and_save(csv_file, base_folder, target_folder)\n"
+   ]
   },
   {
    "metadata": {},
-   "cell_type": "code",
+   "cell_type": "raw",
    "source": [
-    "from image_util import grayscale_images\n",
+    "from image_util import load_and_normalize, to_grayscale, to_histgram\n",
+    "import datetime\n",
     "\n",
     "# Correct paths to your dataset\n",
     "csv_file = r\"./archive/data.csv\"\n",
     "base_folder = r\"./archive/resized\"\n",
-    "target_folder = r\"./archive/grayscale\"\n",
     "\n",
-    "# normalize images\n",
-    "grayscale_images(csv_file, base_folder, target_folder)"
-   ],
-   "outputs": [],
-   "execution_count": null
+    "start_time = datetime.datetime.now()\n",
+    "print(f\"Start Time {start_time}\")\n",
+    "\n",
+    "# load and normalize images\n",
+    "images, labels = load_and_normalize(csv_file, base_folder)\n",
+    "normalize_time = datetime.datetime.now()\n",
+    "print(f\"loading time: {normalize_time - start_time}\")\n",
+    "\n",
+    "# Step 1\n",
+    "grayscale_images = to_grayscale(images)\n",
+    "grayscale_time = datetime.datetime.now()\n",
+    "print(f\"grayscale time: {grayscale_time - normalize_time}\")\n",
+    "\n",
+    "# Step 2\n",
+    "histgram_images = to_histgram(grayscale_images)\n",
+    "histgram_time = datetime.datetime.now()\n",
+    "print(f\"histogram time: {histgram_time - grayscale_time}\")\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
